risc0/zirgen/dsl/test/repro/declaration_bad_type.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error:

component Count() {
  a : R+eg;
  a := Reg(1+a@1);
}

